--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "object-rename-keys",
   "version": "1.0.0",
-  "description": "Rename the selected object keys",
+  "description": "Rename the selected object key(s)",
   "main": "index.js",
   "scripts": {
     "test": "node tests"
