--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Rename the selected object key(s)",
   "main": "index.js",
   "scripts": {
-    "test": "node tests"
+    "test": "node tests",
+    "build": "./node_modules/.bin/babel src/index.js -o index.js"
   },
   "repository": {
     "type": "git",
@@ -13,6 +14,8 @@
   "author": "Nick Luo (https://github.com/nluo)",
   "license": "MIT",
   "devDependencies": {
+    "babel-cli": "^6.26.0",
+    "babel-preset-env": "^1.6.1",
     "tape": "^4.0.0"
   },
   "dependencies": {
